# nauta

./: .gitignore  .gitmodules  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  config.yml  requirements.txt  w.yml
applications/experiment-service/: .gitignore  BUILD.bazel  Dockerfile  Gopkg.toml  Makefile  README.md  Readme.md  code_coverage.sh  glide.yaml  main.go  requirements.go
applications/experiment-service/_example/pkg/apiserver/: apiserver.go
applications/experiment-service/_example/pkg/signals/: signal.go
applications/experiment-service/cmd/apiserver/: main.go  start.go
applications/experiment-service/cmd/controller/: controller.go  controller_mock_test.go  controller_suite_test.go  controller_test.go  controller_util_test.go  main.go
applications/experiment-service/dev-local-cluster/: pod-registry.yaml  storage-docer-mac.yaml
applications/experiment-service/hack/: boilerplate.go.txt  registry.sh  update-codegen.sh
applications/experiment-service/pkg/apis/aggregator/: doc.go  register.go  types.go  zz_generated.api.register.go  zz_generated.deepcopy.go
applications/experiment-service/pkg/apiserver/: apiserver.go
applications/experiment-service/pkg/controller/run/: controller.go  controller_test.go  run_suite_test.go  (+1 more)
applications/experiment-service/pkg/openapi/: openapi_generated.go
applications/experiment-service/pkg/registry/: registry.go
applications/experiment-service/pkg/signals/: signal.go
applications/experiment-service/sample/: run.yaml
applications/experiment-service/service/: experiment.go
(+2515 files in other folders)
